--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,20 @@
     <string name="cancel">Cancel</string>
     <string name="select">Select</string>
 
+    <string name="messages_header">Preference Setting</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="zoom_title">Google Map Zoom Level </string>
+    <string name="radius_title">Search Radius in Meters</string>
+    <string name="sort_title">Sort Sequence</string>
+
+    <string name="auto_title">Load PlaceList automatically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="space">" "</string>
+
 </resources>
